<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <Button
        android:id="@+id/refresh_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh_listview" />

    <Button
        android:id="@+id/refresh_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh_gridview" />

    <Button
        android:id="@+id/refresh_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh_tv" />

    <Button
        android:id="@+id/refresh_slide_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh_slide_lv" />

    <Button
        android:id="@+id/swipe_refresh_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swipe_layout" />

</LinearLayout>